--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,7 +3,9 @@
         Options -MultiViews
     </IfModule>
 
-    RewriteEngine On
+   Options +FollowSymLinks
+RewriteEngine On
+
 
     # Redirect Trailing Slashes...
     RewriteRule ^(.*)/$ /$1 [L,R=301]
@@ -11,5 +13,5 @@
     # Handle Front Controller...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^ index.php [L]
+    RewriteRule ^(.*)$ index.php/$1 [L]
 </IfModule>
